--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="CRM - Sandwich Car" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>School-21</title>
+    <title>Sora-davomat</title>
   </head>
   <body>
     <div id="root"></div>
